--- a/src/App.EndPoints.MVC/Views/_ViewImports.cshtml
+++ b/src/App.EndPoints.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using App.EndPoints.MVC
 @using App.EndPoints.MVC.Models
 @using App.Domain.Core.Products.DTOs
+@using ExchangeProxy.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
