--- a/src/App.EndPoints.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/src/App.EndPoints.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using App.EndPoints.MVC
 @using App.EndPoints.MVC.Models
 @using App.Domain.Core.Products.DTOs
-@using ExchangeProxy.Models
+@* @using ExchangeProxy.Models *@
 @using App.EndPoints.MVC.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
