--- a/src/App.EndPoints.MVC/Views/Home/Index.cshtml
+++ b/src/App.EndPoints.MVC/Views/Home/Index.cshtml
@@ -42,3 +42,15 @@
 
     </table>
 </div>
+
+@section AdditionalFooterText
+{
+    <h1>این متن از سکشن فوتر می آید</h1>
+}
+
+                    
+@section Scripts
+{
+    
+    <h1>Hi</h1>
+}
