--- a/src/App.EndPoints.MVC/Views/Shared/_Layout.cshtml
+++ b/src/App.EndPoints.MVC/Views/Shared/_Layout.cshtml
@@ -404,6 +404,7 @@
     </aside>
 
     <footer class="footer">
+        @RenderSection("AdditionalFooterText", required: false)
         <span class="text-left">
             <a href="http://coreui.io">CoreUI</a> &copy; 2016 creativeLabs.
         </span>
